test/pure/negative/impure2.mli
val f : int -> int
(*@ y = f x
    pure
    diverges *)
