test/pure/negative/impure2.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel {| y = f x
    pure
    diverges |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
    diverges
     *)
File "impure2.mli", line 5, characters 21-22:
Error: Type checking error: a pure function cannot diverge
